--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Haripal Thakur</h1>
             <p>Power BI Expert | Data Visualization Specialist</p>
             <nav>
                 <a href="index.html">Home</a> |
