--- a/index.html
+++ b/index.html
@@ -7,31 +7,108 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Sticky Header -->
     <header>
         <div class="container">
-            <h1>Haripal Thakur</h1>
-            <p>Power BI Expert | Data Visualization Specialist</p>
+            <h1>Your Name</h1>
             <nav>
-                <a href="index.html">Home</a> |
-                <a href="about.html">About Me</a> |
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="blog.html">Blog</a> |
-                <a href="contact.html">Contact</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
 
-    <section id="home">
+    <!-- Home Section -->
+    <section id="home" class="fullscreen">
         <div class="container">
             <h2>Welcome to My Portfolio</h2>
-            <p>I specialize in creating advanced Power BI dashboards and data visualizations that drive business decisions. Explore my work and get in touch!</p>
+            <p>I specialize in creating advanced Power BI dashboards and data visualizations that drive business decisions.</p>
+            <a href="#about" class="btn">Learn More</a>
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions.</p>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <div class="feature">
+            <div class="container">
+                <h2>Sales Performance Dashboard</h2>
+                <p>An interactive dashboard showcasing sales trends, regional performance, and KPIs. Built using Power BI and integrated with SQL Server.</p>
+                <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Sales Dashboard">
+            </div>
+        </div>
+        <div class="feature">
+            <div class="container">
+                <h2>Customer Segmentation Dashboard</h2>
+                <p>A detailed analysis of customer demographics and behavior. Visualized using Power BI and DAX for advanced calculations.</p>
+                <img src="https://images.unsplash.com/photo-1556741533-3824975a6b5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Customer Segmentation">
+            </div>
+        </div>
+        <div class="feature">
+            <div class="container">
+                <h2>Financial Analytics Dashboard</h2>
+                <p>A comprehensive dashboard for financial analysis, including revenue, expenses, and profitability metrics.</p>
+                <img src="https://images.unsplash.com/photo-1556741533-3824975a6b5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Financial Analytics">
+            </div>
+        </div>
+    </section>
+
+    <!-- Blog Section -->
+    <section id="blog">
+        <div class="feature">
+            <div class="container">
+                <h2>5 Tips for Better Data Visualization</h2>
+                <p>Learn how to create impactful visualizations that tell a story. This post covers best practices for using Power BI to communicate insights effectively.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+        <div class="feature">
+            <div class="container">
+                <h2>Power BI vs Tableau: Which is Better?</h2>
+                <p>A comparison of the two leading data visualization tools. This post explores the pros and cons of Power BI and Tableau for business analytics.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+        <div class="feature">
+            <div class="container">
+                <h2>How to Optimize Power BI Performance</h2>
+                <p>Discover techniques to improve the performance of your Power BI reports and dashboards. Learn about data modeling, DAX optimizations, and more.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <form action="submit-form.php" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn">Send</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2023 Your Name. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="script.js"></script>
 </body>
 </html>
