--- a/index.html
+++ b/index.html
@@ -34,56 +34,79 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions.</p>
+            <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions. My expertise includes:</p>
+            <ul>
+                <li>Designing interactive and user-friendly dashboards.</li>
+                <li>Using DAX and Power Query for advanced data modeling.</li>
+                <li>Integrating Power BI with various data sources (SQL, Excel, APIs).</li>
+                <li>Training teams on Power BI best practices.</li>
+            </ul>
         </div>
     </section>
 
     <!-- Portfolio Section -->
     <section id="portfolio">
-        <div class="feature">
-            <div class="container">
-                <h2>Sales Performance Dashboard</h2>
-                <p>An interactive dashboard showcasing sales trends, regional performance, and KPIs. Built using Power BI and integrated with SQL Server.</p>
-                <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Sales Dashboard">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <!-- Portfolio Item 1 -->
+            <div class="portfolio-item">
+                <div class="portfolio-image">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Sales Dashboard">
+                </div>
+                <div class="portfolio-text">
+                    <h3>Sales Performance Dashboard</h3>
+                    <p>An interactive dashboard showcasing sales trends, regional performance, and KPIs. Built using Power BI and integrated with SQL Server.</p>
+                    <a href="#" class="btn">View Project</a>
+                </div>
             </div>
-        </div>
-        <div class="feature">
-            <div class="container">
-                <h2>Customer Segmentation Dashboard</h2>
-                <p>A detailed analysis of customer demographics and behavior. Visualized using Power BI and DAX for advanced calculations.</p>
-                <img src="https://images.unsplash.com/photo-1556741533-3824975a6b5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Customer Segmentation">
+            <!-- Portfolio Item 2 -->
+            <div class="portfolio-item reverse">
+                <div class="portfolio-image">
+                    <img src="https://images.unsplash.com/photo-1556741533-3824975a6b5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Customer Segmentation">
+                </div>
+                <div class="portfolio-text">
+                    <h3>Customer Segmentation Dashboard</h3>
+                    <p>A detailed analysis of customer demographics and behavior. Visualized using Power BI and DAX for advanced calculations.</p>
+                    <a href="#" class="btn">View Project</a>
+                </div>
             </div>
-        </div>
-        <div class="feature">
-            <div class="container">
-                <h2>Financial Analytics Dashboard</h2>
-                <p>A comprehensive dashboard for financial analysis, including revenue, expenses, and profitability metrics.</p>
-                <img src="https://images.unsplash.com/photo-1556741533-3824975a6b5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Financial Analytics">
+            <!-- Portfolio Item 3 -->
+            <div class="portfolio-item">
+                <div class="portfolio-image">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Financial Analytics">
+                </div>
+                <div class="portfolio-text">
+                    <h3>Financial Analytics Dashboard</h3>
+                    <p>A comprehensive dashboard for financial analysis, including revenue, expenses, and profitability metrics.</p>
+                    <a href="#" class="btn">View Project</a>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Blog Section -->
     <section id="blog">
-        <div class="feature">
-            <div class="container">
-                <h2>5 Tips for Better Data Visualization</h2>
-                <p>Learn how to create impactful visualizations that tell a story. This post covers best practices for using Power BI to communicate insights effectively.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-        </div>
-        <div class="feature">
-            <div class="container">
-                <h2>Power BI vs Tableau: Which is Better?</h2>
-                <p>A comparison of the two leading data visualization tools. This post explores the pros and cons of Power BI and Tableau for business analytics.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-        </div>
-        <div class="feature">
-            <div class="container">
-                <h2>How to Optimize Power BI Performance</h2>
-                <p>Discover techniques to improve the performance of your Power BI reports and dashboards. Learn about data modeling, DAX optimizations, and more.</p>
-                <a href="#" class="btn">Read More</a>
+        <div class="container">
+            <h2>Blog</h2>
+            <div class="blog-grid">
+                <!-- Blog Post 1 -->
+                <div class="blog-post">
+                    <h3>5 Tips for Better Data Visualization</h3>
+                    <p>Learn how to create impactful visualizations that tell a story. This post covers best practices for using Power BI to communicate insights effectively.</p>
+                    <a href="blog-post-1.html" class="btn">Read More</a>
+                </div>
+                <!-- Blog Post 2 -->
+                <div class="blog-post">
+                    <h3>Power BI vs Tableau: Which is Better?</h3>
+                    <p>A comparison of the two leading data visualization tools. This post explores the pros and cons of Power BI and Tableau for business analytics.</p>
+                    <a href="blog-post-2.html" class="btn">Read More</a>
+                </div>
+                <!-- Blog Post 3 -->
+                <div class="blog-post">
+                    <h3>How to Optimize Power BI Performance</h3>
+                    <p>Discover techniques to improve the performance of your Power BI reports and dashboards. Learn about data modeling, DAX optimizations, and more.</p>
+                    <a href="blog-post-3.html" class="btn">Read More</a>
+                </div>
             </div>
         </div>
     </section>
