--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <p>I specialize in creating advanced Power BI dashboards and data visualizations that drive business decisions.</p>
             <a href="#about" class="btn">Learn More</a>
         </div>
+        <div class="animated-background"></div>
     </section>
 
     <!-- About Section -->
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions. My expertise includes:</p>
+            <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions.</p>
             <ul>
                 <li>Designing interactive and user-friendly dashboards.</li>
                 <li>Using DAX and Power Query for advanced data modeling.</li>
@@ -42,6 +43,7 @@
                 <li>Training teams on Power BI best practices.</li>
             </ul>
         </div>
+        <div class="animated-background"></div>
     </section>
 
     <!-- Portfolio Section -->
@@ -82,6 +84,7 @@
                 </div>
             </div>
         </div>
+        <div class="animated-background"></div>
     </section>
 
     <!-- Blog Section -->
@@ -109,6 +112,7 @@
                 </div>
             </div>
         </div>
+        <div class="animated-background"></div>
     </section>
 
     <!-- Contact Section -->
@@ -122,6 +126,7 @@
                 <button type="submit" class="btn">Send</button>
             </form>
         </div>
+        <div class="animated-background"></div>
     </section>
 
     <!-- Footer -->
