--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Theme Toggle Button -->
-    <button id="theme-toggle" class="theme-toggle">
-        <i class="fas fa-moon"></i>
-    </button>
+   
 
     <!-- Sticky Header -->
     <header>
@@ -23,9 +20,16 @@
                 <a href="#portfolio">Portfolio</a>
                 <a href="#blog">Blog</a>
                 <a href="#contact">Contact</a>
+                <button id="theme-toggle" class="theme-toggle">
+                    <i class="fas fa-moon"></i>
             </nav>
+            
         </div>
     </header>
+     <!-- Theme Toggle Button -->
+     <!-- <button id="theme-toggle" class="theme-toggle">
+        <i class="fas fa-moon"></i>
+    </button> -->
 
     <!-- Home Section -->
     <section id="home" class="fullscreen">
@@ -42,12 +46,6 @@
         <div class="container">
             <h2>About Me</h2>
             <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions.</p>
-            <ul>
-                <li>Designing interactive and user-friendly dashboards.</li>
-                <li>Using DAX and Power Query for advanced data modeling.</li>
-                <li>Integrating Power BI with various data sources (SQL, Excel, APIs).</li>
-                <li>Training teams on Power BI best practices.</li>
-            </ul>
         </div>
         <div class="animated-background"></div>
     </section>
@@ -59,7 +57,7 @@
             <!-- Portfolio Item 1 -->
             <div class="portfolio-item">
                 <div class="portfolio-image">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Sales Dashboard">
+                    <img src="images/sales-dashboard.png" alt="Sales Dashboard">
                 </div>
                 <div class="portfolio-text">
                     <h3>Sales Performance Dashboard</h3>
@@ -70,7 +68,7 @@
             <!-- Portfolio Item 2 -->
             <div class="portfolio-item reverse">
                 <div class="portfolio-image">
-                    <img src="https://images.unsplash.com/photo-1556741533-3824975a6b5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Customer Segmentation">
+                    <img src="images/customer-segmentation.png" alt="Customer Segmentation">
                 </div>
                 <div class="portfolio-text">
                     <h3>Customer Segmentation Dashboard</h3>
@@ -81,7 +79,7 @@
             <!-- Portfolio Item 3 -->
             <div class="portfolio-item">
                 <div class="portfolio-image">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="Financial Analytics">
+                    <img src="images/financial-analytics.png" alt="Financial Analytics">
                 </div>
                 <div class="portfolio-text">
                     <h3>Financial Analytics Dashboard</h3>
