--- a/index.html
+++ b/index.html
@@ -1,173 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Power BI Expert</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-   
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Sticky Header -->
-    <header>
-        <div class="container">
-            <h1>Your Name</h1>
-            <nav>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#blog">Blog</a>
-                <a href="#contact">Contact</a>
-                <button id="theme-toggle" class="theme-toggle">
-                    <i class="fas fa-moon"></i>
-            </nav>
-            
-        </div>
-    </header>
-     <!-- Theme Toggle Button -->
-     <!-- <button id="theme-toggle" class="theme-toggle">
-        <i class="fas fa-moon"></i>
-    </button> -->
-
-    <!-- Home Section -->
-    <section id="home" class="fullscreen">
-        <div class="container">
-            <h2>Welcome to My Portfolio</h2>
-            <p>I specialize in creating advanced Power BI dashboards and data visualizations that drive business decisions.</p>
-            <a href="#about" class="btn">Learn More</a>
-        </div>
-        <div class="animated-background"></div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>I am a Power BI expert with experience at <strong>Sigmoid Analytics</strong> and <strong>Quantiphi Analytics</strong>. I specialize in creating advanced dashboards and data visualizations that drive business decisions.</p>
-        </div>
-        <div class="animated-background"></div>
-    </section>
-
-    <!-- Portfolio Section -->
-    <section id="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <!-- Portfolio Item 1 -->
-            <div class="portfolio-item">
-                <div class="portfolio-image">
-                    <img src="images/sales-dashboard.png" alt="Sales Dashboard">
-                </div>
-                <div class="portfolio-text">
-                    <h3>Sales Performance Dashboard</h3>
-                    <p>An interactive dashboard showcasing sales trends, regional performance, and KPIs. Built using Power BI and integrated with SQL Server.</p>
-                    <a href="#" class="btn">View Project</a>
-                </div>
-            </div>
-            <!-- Portfolio Item 2 -->
-            <div class="portfolio-item reverse">
-                <div class="portfolio-image">
-                    <img src="images/customer-segmentation.png" alt="Customer Segmentation">
-                </div>
-                <div class="portfolio-text">
-                    <h3>Customer Segmentation Dashboard</h3>
-                    <p>A detailed analysis of customer demographics and behavior. Visualized using Power BI and DAX for advanced calculations.</p>
-                    <a href="#" class="btn">View Project</a>
-                </div>
-            </div>
-            <!-- Portfolio Item 3 -->
-            <div class="portfolio-item">
-                <div class="portfolio-image">
-                    <img src="images/financial-analytics.png" alt="Financial Analytics">
-                </div>
-                <div class="portfolio-text">
-                    <h3>Financial Analytics Dashboard</h3>
-                    <p>A comprehensive dashboard for financial analysis, including revenue, expenses, and profitability metrics.</p>
-                    <a href="#" class="btn">View Project</a>
-                </div>
+  <section id="home">
+    <div class="home-container">
+        <div class="intro">
+            <img src="Images/myimage.jpg" alt="Your Image" class="intro-img">
+            <div>
+                <h1>Haripal Thakur</h1>
+                <p>
+                    Hi, I'm a <strong>Senior Power BI Developer</strong> with over 7 years of experience in data analysis, automation, and dashboard development. 
+                    I specialize in creating performance-optimized BI solutions and migrating existing BI suites to new applications. 
+                    I have a strong track record of delivering innovative solutions while collaborating with cross-functional teams across organizations.
+                </p>
             </div>
         </div>
-        <div class="animated-background"></div>
-    </section>
-
-    <!-- Blog Section -->
-    <section id="blog">
-        <div class="container">
-            <h2>Blog</h2>
-            <div class="blog-grid">
-                <!-- Blog Post 1 -->
-                <div class="blog-post">
-                    <h3>5 Tips for Better Data Visualization</h3>
-                    <p>Learn how to create impactful visualizations that tell a story. This post covers best practices for using Power BI to communicate insights effectively.</p>
-                    <a href="blog-post-1.html" class="btn">Read More</a>
-                </div>
-                <!-- Blog Post 2 -->
-                <div class="blog-post">
-                    <h3>Power BI vs Tableau: Which is Better?</h3>
-                    <p>A comparison of the two leading data visualization tools. This post explores the pros and cons of Power BI and Tableau for business analytics.</p>
-                    <a href="blog-post-2.html" class="btn">Read More</a>
-                </div>
-                <!-- Blog Post 3 -->
-                <div class="blog-post">
-                    <h3>How to Optimize Power BI Performance</h3>
-                    <p>Discover techniques to improve the performance of your Power BI reports and dashboards. Learn about data modeling, DAX optimizations, and more.</p>
-                    <a href="blog-post-3.html" class="btn">Read More</a>
-                </div>
+        <div class="slider">
+            <div class="slider-wrapper">
+                <img src="Images/chart2.png" alt="Portfolio Image 1">
+                <img src="Images/chart3.png" alt="Portfolio Image 2">
+                <img src="Images/chart4.png" alt="Portfolio Image 3">
+                <img src="Images/chart1.png" alt="Portfolio Image 4">
             </div>
         </div>
-        <div class="animated-background"></div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <div class="contact-grid">
-                <div class="contact-form">
-                    <form action="submit-form.php" method="POST">
-                        <div class="form-group">
-                            <input type="text" name="name" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" name="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" placeholder="Your Message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn">Send Message</button>
-                    </form>
-                </div>
-                <div class="contact-info">
-                    <div class="info-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <p>123 Data Street, Analytics City, IN 12345</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-phone"></i>
-                        <p>+91 123 456 7890</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-envelope"></i>
-                        <p>yourname@example.com</p>
-                    </div>
-                </div>
-                <div class="contact-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.869317856832!2d77.2093163150817!3d28.57298298244094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2a7a6d8f7e5%3A0x9b3b7b7b7b7b7b7b!2sData%20Street!5e0!3m2!1sen!2sin!4v1633081234567!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
+    </div>
+</section>
+  <!-- Portfolio Section -->
+  <section id="portfolio">
+    <div class="section-header">
+        <h2>Featured Projects</h2>
+    </div>
+    <div class="portfolio-slider">
+        <div class="project">
+            <img src="Images/chart2.png" alt="Project">
+            <div class="project-info">
+                <h3>Datorama to Power BI Migration</h3>
+                <p>Migrated 1,100+ reports to 14 dynamic Power BI reports, implementing Row-Level Security (RLS) and dynamic hierarchies.</p>
+                <span>Power BI</span>
+                <span>Dataflows</span>
+                <span>Power Automate</span>
+                <a href="project1.html"><button>View Project</button></a>
             </div>
         </div>
-        <div class="animated-background"></div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <div class="project">
+            <img src="Images/chart3.png" alt="Project">
+            <div class="project-info">
+                <h3>User Adoption Report</h3>
+                <p>Built a historical data pipeline using Dataflows and Power Automate to overcome Power BI’s 30-day data retention limit.</p>
+                <span>Power BI</span>
+                <span>Dataflows</span>
+                <span>Power Automate</span>
+                <a href="project2.html"><button>View Project</button></a>
+            </div>
         </div>
-    </footer>
+        <div class="project">
+            <img src="Images/chart4.png" alt="Project">
+            <div class="project-info">
+                <h3>CPG Sales Analysis</h3>
+                <p>Developed Power BI reports for inventory sales, volume, and weeks of cover analysis using the Haversine formula.</p>
+                <span>Power BI</span>
+                <span>SQL</span>
+                <span>TabularEditor</span>
+                <a href="project3.html"><button>View Project</button></a>
+            </div>
+        </div>
+    </div>
+</section>
+  <!-- Services Section -->
+  <section id="services">
+    <div class="section-header">
+      <h2>Services</h2>
+    </div>
+    <div class="services-container">
+      <div class="service">
+        <h3>Power BI Development</h3>
+        <p>Creating interactive and performance-optimized dashboards for data visualization.</p>
+      </div>
+      <div class="service">
+        <h3>Data Analysis</h3>
+        <p>Transforming raw data into actionable insights using advanced analytics tools.</p>
+      </div>
+      <div class="service">
+        <h3>Automation</h3>
+        <p>Automating repetitive tasks and workflows to improve efficiency.</p>
+      </div>
+      <div class="service">
+        <h3>Access Control</h3>
+        <p>Automating repetitive tasks and workflows to improve efficiency.</p>
+      </div>
+    </div>
+  </section>
 
-    <!-- Scripts -->
-    <script src="script.js"></script>
+  <!-- Blog Section -->
+  <section id="blog">
+    <div class="section-header">
+        <h2>Blog</h2>
+    </div>
+    <div class="blog-slider">
+        <div class="blog-card">
+            <img src="Images/chart2.png" alt="Blog">
+            <div>
+                <h3>Power BI Best Practices</h3>
+                <p>Learn how to optimize Power BI dashboards for performance and scalability.</p>
+                <span>Haripal Thakur</span>
+                <a href="blog1.html"><button>Read More</button></a>
+            </div>
+        </div>
+        <div class="blog-card">
+            <img src="Images/chart3.png" alt="Blog">
+            <div>
+                <h3>Data Migration Strategies</h3>
+                <p>Explore effective strategies for migrating BI suites to new platforms.</p>
+                <span>Haripal Thakur</span>
+                <a href="blog2.html"><button>Read More</button></a>
+            </div>
+        </div>
+        <div class="blog-card">
+            <img src="Images/chart4.png" alt="Blog">
+            <div>
+                <h3>Automating Data Workflows</h3>
+                <p>Discover how to automate repetitive tasks using Power Automate and Dataflows.</p>
+                <span>Haripal Thakur</span>
+                <a href="blog3.html"><button>Read More</button></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact Section -->
+  <section id="contact">
+    <div class="section-header">
+      <h2>Contact Me</h2>
+    </div>
+    <div class="contact-form">
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Haripal Thakur</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
